--- a/src/app/component/form/form.component.html
+++ b/src/app/component/form/form.component.html
@@ -1,48 +1,44 @@
 <h1>Formulário</h1>
 <div class="d-flex justify-content-end">
 
-  <button class="btn btn-primary">Novo</button>
+  <button mat-button class="btn btn-success" (click)="openFormDialog('add')">
+    <mat-icon>add</mat-icon>
+    Adicionar
+  </button>
 </div>
-<table mat-table [dataSource]="forms" class="table table-striped" width="100%">
-  <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef>No.</th>
-    <td mat-cell *matCellDef="let element">{{element.id}}</td>
-  </ng-container>
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>name</th>
-    <td mat-cell *matCellDef="let element">{{element.name}}</td>
-  </ng-container>
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>description</th>
-    <td mat-cell *matCellDef="let element">{{element.description}}</td>
-  </ng-container>
-  <ng-container matColumnDef="expiredAt">
-    <th mat-header-cell *matHeaderCellDef>expiredAt</th>
-    <td mat-cell *matCellDef="let element">{{element.expiredAt}}</td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
 <br>
 
 <table class="table table-striped" width="100%">
   <thead>
     <tr>
+      <th>#</th>
       <th>Nome</th>
-      <th>Código</th>
       <th>Descrição</th>
       <th>Expira em</th>
-      <th>Criado por</th>
+      <th>Ações</th>
     </tr>
   </thead>
-  <tbody>
-    <tr routerLink="/createForm" routerLinkActive="active">
-      <td>Censo demográfico 2022</td>
-      <td>IBGE-CD2022</td>
-      <td>Censo demográfico 2022</td>
-      <td>10/06/2022 12:00:00</td>
-      <td>Mim</td>
+  <tbody *ngFor="let form of forms">
+    <tr style="vertical-align: baseline;">
+      <td>{{form.id}}</td>
+      <td>{{form.name}}</td>
+      <td>{{form.description}}</td>
+      <td>{{form.expiredAt}}</td>
+      <td class="d-flex">
+        <button mat-button class="btn btn-sm btn-primary" [routerLink]="['/form-builder', {formId: form.id}]">
+          <mat-icon>visibility</mat-icon>
+        </button>
+        <button mat-button class="btn btn-sm btn-warning" (click)="openFormDialog('edit', form)">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-button class="btn btn-sm btn-danger" (click)="openFormDialog('delete', form)">
+          <mat-icon>delete</mat-icon>
+        </button>
+        <button mat-button class="btn btn-sm mx-1 btn-primary" [routerLink]="['/form-execution', {formId: form.id}]">
+          <mat-icon>notes</mat-icon>
+          Responder
+        </button>
+      </td>
     </tr>
   </tbody>
 </table>
