--- a/src/app/component/form/form.component.html
+++ b/src/app/component/form/form.component.html
@@ -26,7 +26,7 @@
       <td>{{form.expiredAt}}</td>
       <td class="d-flex">
         <button mat-button class="btn btn-sm btn-primary" [routerLink]="['/form-builder', {formId: form.id}]">
-          <mat-icon>visibility</mat-icon>
+          <mat-icon>settings</mat-icon>
         </button>
         <button mat-button class="btn btn-sm btn-warning" (click)="openFormDialog('edit', form)">
           <mat-icon>edit</mat-icon>
