--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,3 +1,21 @@
 <h1>Bem vindo ao seu aplicativo de Censos!</h1>
 
-<h2>Já pensou em contruir formulários de forma fácil? Agora você pode, clique em "Entrar" e comece ser um FormBuilder</h2>
+<h2>Já pensou em construir formulários de forma fácil? Agora você pode, clique em "Entrar" e comece a ser um FormBuilder!
+</h2>
+
+<!-- <p> Construído por: </p>
+<p> Lukas Araujo Santiago - 081190013</p>
+<p> Arthur Alves de Oliveira - 081190030</p>
+<p> Nicolas Thomazini Evangelista - 081190022</p>
+<p> Victor Bueno Kato - 081190045</p> -->
+
+<pre class="p-3 rounded-3 text-bg-dark font-monospace" style="font-size: 1.5rem; line-height: 1.8rem">
+  {{'{'}}
+    "CriadoPor": [
+    "Lukas Araujo Santiago - 081190013",
+    "Arthur Alves de Oliveira - 081190030",
+    "Nicolas Thomazini Evangelista - 081190022",
+    "Victor Bueno Kato - 081190045"
+    ]
+  {{'}'}}
+</pre>
