--- a/src/app/component/form-builder/form-builder.component.html
+++ b/src/app/component/form-builder/form-builder.component.html
@@ -1,3 +1,4 @@
+<h1>Configurar formulário</h1>
 <table class="table table-striped" width="100%">
   <thead>
     <tr>
@@ -36,6 +37,7 @@
       <mat-label for="field-type">{{formField.fieldDescription}}</mat-label>
       <input matInput type="text" name="field-value" id="" [(ngModel)]="formField.description">
     </mat-form-field>
+    <button mat-flat-button class="btn btn-primary btn-sm mx-4" (click)="deleteFormField(index)">Excluir Campo</button>
   </div>
   <div *ngIf="formField.fieldId == 2">
     <span class="mx-3">#{{index + 1}}</span>
@@ -43,6 +45,7 @@
       <mat-label for="field-type">{{formField.fieldDescription}}</mat-label>
       <textarea matInput type="text" name="field-value" id="" [(ngModel)]="formField.description"></textarea>
     </mat-form-field>
+    <button mat-flat-button class="btn btn-primary btn-sm mx-4" (click)="deleteFormField(index)">Excluir Campo</button>
   </div>
 </div>
 
